tests/typescript/neg/simple/bool-01.ts

/*@ emp :: #Array[#Immutable, number] */
var emp = [];

assert(emp === null);

